# TEDI.remote-access

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build.mjs  extension.js  manifest.json  package-lock.json  package.json
.github/workflows/: build-check.yml  release.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ChangePasswordModal.tsx  ConfirmModal.tsx  Header.tsx  IconButton.tsx  Login.tsx  MobileKeys.tsx  NewSshModal.tsx  NewTerminalModal.tsx  NewWorkspaceModal.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  TerminalHost.tsx  Turnstile.tsx  Workspace.tsx  WorkspaceBar.tsx
client/src/components/ui/: button.tsx  dropdown-menu.tsx  modal.tsx  select.tsx  tooltip.tsx
client/src/hooks/: useRemote.ts
client/src/lib/: b64.ts  icons.ts  protocol.ts  termTitle.ts
docs/: ARCHITECTURE.md  SSH.md
server/: .env.example  README.md  gen-hash.js  install.sh  package-lock.json  package.json  server.js  test-client.js
server/deploy/: remote.example.com.conf  remote.example.com.http.conf  remote.ilhamriski.com.conf  remote.ilhamriski.com.http.conf  tedi-remote.service
sidecar-src/: Cargo.toml
sidecar-src/src/: daemon.rs  main.rs  wire.rs
src/: index.js
