[package]
name = "tedi-remote-agent"
version = "0.1.0"
edition = "2021"
description = "TEDI remote-access agent: mirrors live PTY daemon sessions to a relay over WSS"
license = "Apache-2.0"
publish = false

# Standalone workspace so cargo never tries to fold this into src-tauri.
[workspace]

[[bin]]
name = "tedi-remote-agent"
path = "src/main.rs"

[dependencies]
# Same IPC crate/major TEDI uses for the daemon named-pipe/socket.
interprocess = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
# Outbound WSS to the relay. native-tls = Windows SChannel + OS root store
# (the agent only ships for Windows), avoiding the rustls crypto-provider dance.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
